--- a/index.html
+++ b/index.html
@@ -5,121 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>تقرير</title>
     <style>
-body {
-    font-family: Arial, sans-serif; /* أضف خطًا يدعم العربية إذا لزم الأمر */
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: linear-gradient(to bottom, #e6f7ff, #cceeff);
-}
-
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            background: linear-gradient(to bottom, #e6f7ff, #cceeff);
+        }
         .container {
             width: 90%;
             max-width: 1200px;
             margin: 20px auto;
             border: 1px solid #99ccff;
             border-radius: 10px;
-            overflow: hidden;
-            background: linear-gradient(to bottom, #ffffff, #e6f7ff);
+            background: #ffffff;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-            padding: 15px;
+            padding: 20px;
         }
-
-        .header {
-            grid-column: span 2;
-            background: linear-gradient(to right, #103d5e, #46b39d);
-            color: #fff;
-            padding: 15px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-            border-radius: 20px;
-            text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
-        }
-
-        .header .text {
-            text-align: right;
-            line-height: 1.5;
-            font-size: 1em;
-        }
-
-        .header .logo {
-            width: 120px;
-            height: 60px;
-            border-radius: 8px;
-            object-fit: cover;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .fields {
-            grid-column: span 2;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-        }
-
-        .field {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .field label {
-            font-weight: normal;
-            margin-bottom: 5px;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-            color: #103d5e;
-        }
-
-
-.field input, .field textarea {
-    font-family: Arial, sans-serif; /* نفس الخط للجميع */
-    font-weight: normal; /* لإزالة العريض */
-    width: 100%;
-    padding: 6px;
-    border: 1px solid #46b39d;
-    border-radius: 5px;
-    font-size: 0.85em;
-    transition: border-color 0.3s, box-shadow 0.3s;
-    box-sizing: border-box;
-    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.1);
-}
-
-        .field input:focus, .field textarea:focus {
-            border-color: #103d5e;
-            box-shadow: 0 0 5px rgba(16, 61, 94, 0.5);
-            outline: none;
-        }
-
-        .field textarea {
-            resize: none;
-            grid-column: span 2;
-        }
-
-        .shahid-section {
-            grid-column: span 2;
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .shahid-section h3 {
-            text-align: center;
-            font-size: 1.2em;
-            color: #103d5e;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-            margin-bottom: 10px;
-        }
-
-        .shahid-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 15px;
-        }
-
         .shahid {
             border: 1px solid #46b39d;
             border-radius: 5px;
@@ -135,112 +37,31 @@ body {
             position: relative;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
         }
-
         .shahid img {
             max-width: 90%;
             max-height: 90%;
             border-radius: 5px;
             object-fit: cover;
-            margin: auto;
         }
-
         .shahid input[type="file"] {
             display: none;
         }
-
-        .buttons {
-            grid-column: span 2;
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .buttons button {
+        .buttons button.download {
+            background-color: #28a745;
+            color: white;
             padding: 10px 20px;
-            font-size: 1em;
             border: none;
             border-radius: 5px;
             margin: 0 10px;
             cursor: pointer;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
         }
-
-        .buttons button.download {
-            background-color: #28a745;
-            color: white;
-        }
-
-        .buttons button.download:hover {
-            background-color: #218838;
-        }
-
-        .footer {
-            grid-column: span 2;
-            font-size: 0.9em;
-            color: #103d5e;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
-            font-weight: bold;
-            position: relative;
-            display: flex;
-            justify-content: space-between;
-            padding: 10px;
-        }
-
-        .footer .programmer, .footer .manager {
-            font-size: 0.85em;
-            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-        }
-
-        .footer .programmer {
-            margin-right: 20px;
-            align-self: flex-end;
-        }
-
-        .footer .manager {
-            margin-left: 20px;
-            align-self: flex-end;
-        }
-
-        @media (max-width: 600px) {
-            .container {
-                grid-template-columns: 1fr;
-            }
-
-            .header {
-                font-size: 0.9em;
-                flex-direction: column;
-                align-items: flex-start;
-            }
-
-            .header .logo {
-                align-self: flex-end;
-                margin-top: 10px;
-            }
-
-            .field input, .field textarea {
-                font-size: 0.75em;
-            }
-
-            .shahid {
-                height: 120px;
-            }
-
-            .footer {
-                flex-direction: column;
-                align-items: center;
-            }
-
-            .footer .programmer, .footer .manager {
-                margin: 5px 0;
-            }
-        }
-
     </style>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <script>
         function toggleFileInput(id) {
             const fileInput = document.getElementById(id);
-            fileInput.click();
+            if (fileInput) fileInput.click();
         }
 
         function displayImage(event, id) {
@@ -248,124 +69,58 @@ body {
             if (file) {
                 const reader = new FileReader();
                 reader.onload = function (e) {
-                    const img = document.querySelector(#${id} img);
-                    img.src = e.target.result;
-                    img.parentElement.classList.add('active');
+                    const img = document.querySelector(`#${id} img`);
+                    if (img) img.src = e.target.result;
                 };
                 reader.readAsDataURL(file);
             }
-        }function downloadAsImage() {
-    const container = document.querySelector('.container');
-    const originalStyles = container.style.cssText;
+        }
 
-    // ضبط الحاوية لمقاسات ثابتة أثناء الالتقاط
-    container.style.width = '800px'; // عرض ثابت
-    container.style.fontSize = '14px'; // حجم نص موحد
-    container.style.lineHeight = '1.5'; // تحسين التباعد بين الأسطر
-    container.style.transform = 'scale(1)'; // إلغاء أي تحجيم سابق
-    container.style.transformOrigin = 'top left';
+        function downloadAsImage() {
+            const container = document.querySelector('.container');
+            if (!container) {
+                alert('العنصر غير موجود');
+                return;
+            }
 
-    html2canvas(container, {
-        scale: 3, // رفع الدقة
-        useCORS: true,
-        backgroundColor: null,
-    }).then((canvas) => {
-        const link = document.createElement('a');
-        link.download = 'report.png';
-        link.href = canvas.toDataURL('image/png');
-        link.click();
-
-        // إعادة الحاوية إلى التنسيق الأصلي
-        container.style.cssText = originalStyles;
-    });
-}
+            html2canvas(container, {
+                scale: 2,
+                useCORS: true,
+                backgroundColor: null,
+            }).then((canvas) => {
+                const link = document.createElement('a');
+                link.download = 'report.png';
+                link.href = canvas.toDataURL('image/png');
+                link.click();
+            }).catch((error) => {
+                console.error('خطأ أثناء التحميل:', error);
+            });
+        }
     </script>
 </head>
 <body>
     <div class="container">
-<div class="header">
-    <div class="text">
-        وزارة التربية والتعليم<br>
-        الإدارة العامة للتعليم<br>
-        مكتب التعليم بمنطقة 
-        <input 
-            type="text" 
-            id="regionInput" 
-            placeholder="أدخل منطقتك هنا" 
-            oninput="updateRegion()" 
-            style="border: none; border-bottom: 1px solid #fff; background: transparent; color: #fff; outline: none; font-size: 1em; width: 150px; text-align: center;">
-    </div>
-    <img src="logo.png" alt="شعار وزارة التعليم" class="logo">
-</div>
-
-<script>
-    function updateRegion() {
-        const regionInput = document.getElementById('regionInput');
-        regionInput.placeholder = regionInput.value || 'أدخل منطقتك هنا';
-    }
-</script>
-
-        <div class="fields">
-            <div class="field">
-                <label for="name">المنفذ:</label>
-                <input type="text" id="name" placeholder="اسم المنفذ">
+        <h1>تقرير النشاط</h1>
+        <div class="shahid-grid">
+            <div id="shahid1" class="shahid" onclick="toggleFileInput('shahid1Input')">
+                <input type="file" id="shahid1Input" accept="image/*" onchange="displayImage(event, 'shahid1')">
+                <img src="" alt="صورة">
             </div>
-
-            <div class="field">
-                <label for="manager">مدير المدرسة:</label>
-                <input type="text" id="manager" placeholder="اسم مدير المدرسة">
+            <div id="shahid2" class="shahid" onclick="toggleFileInput('shahid2Input')">
+                <input type="file" id="shahid2Input" accept="image/*" onchange="displayImage(event, 'shahid2')">
+                <img src="" alt="صورة">
             </div>
-
-            <div class="field">
-                <label for="location">مكان التنفيذ:</label>
-                <input type="text" id="location" placeholder="مكان التنفيذ">
+            <div id="shahid3" class="shahid" onclick="toggleFileInput('shahid3Input')">
+                <input type="file" id="shahid3Input" accept="image/*" onchange="displayImage(event, 'shahid3')">
+                <img src="" alt="صورة">
             </div>
-
-            <div class="field">
-                <label for="objectives">الأهداف:</label>
-                <textarea id="objectives" rows="4" placeholder="اكتب الأهداف هنا..."></textarea>
-            </div>
-
-            <div class="field">
-                <label for="beneficiaries">المستفيدون:</label>
-                <input type="text" id="beneficiaries" placeholder="عدد المستفيدين">
-            </div>
-
-            <div class="field">
-                <label for="date">تاريخ التنفيذ:</label>
-                <input type="date" id="date">
+            <div id="shahid4" class="shahid" onclick="toggleFileInput('shahid4Input')">
+                <input type="file" id="shahid4Input" accept="image/*" onchange="displayImage(event, 'shahid4')">
+                <img src="" alt="صورة">
             </div>
         </div>
-
-        <div class="shahid-section">
-            <h3>الشواهد ⤵️</h3>
-            <div class="shahid-grid">
-                <div id="shahid1" class="shahid" onclick="toggleFileInput('shahid1Input')">
-                    <input type="file" id="shahid1Input" accept="image/*" onchange="displayImage(event, 'shahid1')">
-                    <img src="" alt="">
-                </div>
-                <div id="shahid2" class="shahid" onclick="toggleFileInput('shahid2Input')">
-                    <input type="file" id="shahid2Input" accept="image/*" onchange="displayImage(event, 'shahid2')">
-                    <img src="" alt="">
-                </div>
-                <div id="shahid3" class="shahid" onclick="toggleFileInput('shahid3Input')">
-                    <input type="file" id="shahid3Input" accept="image/*" onchange="displayImage(event, 'shahid3')">
-                    <img src="" alt="">
-                </div>
-                <div id="shahid4" class="shahid" onclick="toggleFileInput('shahid4Input')">
-                    <input type="file" id="shahid4Input" accept="image/*" onchange="displayImage(event, 'shahid4')">
-                    <img src="" alt="">
-                </div>
-            </div>
-        </div>
-
         <div class="buttons">
             <button class="download" onclick="downloadAsImage()">تحميل مباشر</button>
-        </div>
-
-        <div class="footer">
-            <span class="programmer">برمجة المعلم صلاح خليفة الفالح</span>
-            <span class="manager">مدير المدرسة حمد فريح المعيقل</span>
         </div>
     </div>
 </body>
