--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ body {
             border: 1px solid #99ccff;
             border-radius: 10px;
             overflow: hidden;
-            background: linear-gradient(to bottom, #ffffff, #e6f7ff);
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: white !important; /* تعيين خلفية بيضاء لتجنب التظليل */
+            box-shadow: none !important; /* إزالة الظلال أثناء الطباعة */
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             gap: 15px;
@@ -298,7 +298,7 @@ body {
     html2canvas(container, {
         scale: 3, // تحسين الدقة
         useCORS: true,
-        backgroundColor: null,
+        backgroundColor: '#ffffff', // تعيين خلفية بيضاء
     }).then((canvas) => {
         const link = document.createElement('a');
         link.download = 'report.png';
